Added some posibility to add elements, not fully working though. Very much WIP.

--- a/QtQuickControls_helloworld/qml.qrc
+++ b/QtQuickControls_helloworld/qml.qrc
@@ -14,5 +14,6 @@
         <file>images/resize.png</file>
         <file>TitleBar.qml</file>
         <file>pointSketch.js</file>
+        <file>Element.qml</file>
     </qresource>
 </RCC>
