Moved main window into a qml file of its own.

--- a/QtQuickControls_helloworld/qml.qrc
+++ b/QtQuickControls_helloworld/qml.qrc
@@ -15,5 +15,6 @@
         <file>TitleBar.qml</file>
         <file>pointSketch.js</file>
         <file>Element.qml</file>
+        <file>MainWindow.qml</file>
     </qresource>
 </RCC>
