Renamed main window to drawing area and moved right panel into its own file.

--- a/QtQuickControls_helloworld/qml.qrc
+++ b/QtQuickControls_helloworld/qml.qrc
@@ -15,6 +15,7 @@
         <file>TitleBar.qml</file>
         <file>pointSketch.js</file>
         <file>Element.qml</file>
-        <file>MainWindow.qml</file>
+        <file>RightPanel.qml</file>
+        <file>DrawingArea.qml</file>
     </qresource>
 </RCC>
