Added grid and possibility to draw elements between nodes. Also added some stuff that doesn't work.

--- a/QtQuickControls_helloworld/qml.qrc
+++ b/QtQuickControls_helloworld/qml.qrc
@@ -17,5 +17,7 @@
         <file>Element.qml</file>
         <file>RightPanel.qml</file>
         <file>DrawingArea.qml</file>
+        <file>HorizontalLine.qml</file>
+        <file>Line.qml</file>
     </qresource>
 </RCC>
