Added bottom panel

--- a/QtQuickControls_helloworld/qml.qrc
+++ b/QtQuickControls_helloworld/qml.qrc
@@ -20,5 +20,6 @@
         <file>HorizontalLine.qml</file>
         <file>Line.qml</file>
         <file>StandardPsButton.qml</file>
+        <file>BottomPanel.qml</file>
     </qresource>
 </RCC>
